--- a/.github/workflows/main_bonsai-angular.yml
+++ b/.github/workflows/main_bonsai-angular.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - uses: actions/checkout@v2
