--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ant-design/icons-angular": "^15.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "ng-zorro-antd": "^15.1.0",
