--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ant-design/icons-angular": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^15.1.0",
     "ngx-bootstrap": "^10.2.0",
     "popper.js": "^1.16.1",
