--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@ant-design/icons-angular": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^15.1.0",
+    "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^10.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
