--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "jquery": "^3.6.4",
+    "json2csv": "^6.0.0-alpha.2",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^15.1.0",
     "ng2-charts": "^4.1.1",
